# cmake-ninja-multi-config

./: .gitignore  CMakeLists.txt  makefile
src/: main.cpp
src/application/: common.hpp  random.cpp
